<resources>
    <string name="app_name">CarLorry</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_select_uaeloc">Select UAE</string>
    <string name="uae">United Arab Emirates</string>
    <string name="india">India</string>
    <string name="Dubai">Dubai</string>
    <string name="AbuDhabi">Abu Dhabi</string>
    <string name="Sharjah">Sharjah</string>
    <string name="Ajman">Ajman</string>
    <string name="UmmAlQaiwain">Umm Al-Qaiwain</string>
    <string name="Fujairah">Fujairah</string>
    <string name="RasAlKhaimah">Ras Al-Khaimah</string>
    <string name="Bangalore">Bangalore</string>
    <string name="Chennai">Chennai</string>
    <string name="Coimbatore">Coimbatore</string>
    <string name="Cochin">Cochin</string>
    <string name="SelectCountry">Select Your Country</string>
    <string name="SelectLocation">Select Location</string>
    <string name="Done">Done</string>
    <string name="title_activity_select_india_loc">SelectIndiaLoc</string>
    <string name="title_activity_select_country">SelectCountry</string>
    <string name="title_activity_select_uaeproducts">Select UAE Products</string>
    <string name="RentACar">Rent a Car</string>
    <string name="LeaseACar">Lease a Car</string>
    <string name="RentABike">Rent a Bike</string>
    <string name="Limousine">Limousine</string>
    <string name="title_activity_select_india_products">Select India Products</string>
    <string name="TripStartDate">Trip Start Date</string>
    <string name="TripStartTime">Trip Start Time</string>
    <string name="TripEndDate">Trip End Date</string>
    <string name="TripEndTime">Trip End Time</string>
    <string name="title_activity_trip_start_date">Trip Start Date</string>
    <string name="title_activity_trip_start_time">Trip Start Time</string>
    <string name="StartTrip">Start Trip</string>
    <string name="EndTrip">End Trip</string>
    <string name="title_activity_trip_end_date">Trip End Date</string>
    <string name="title_activity_trip_end_time">Trip End Time</string>
    <string name="title_activity_search_result">Search Result</string>
    <string name="book">Book</string>
    <string name="SitePickup">Site Pick-up</string>
    <string name="DoorstepService">Doorstep Service</string>
    <string name="title_activity_datarow_search_result">DatarowSearchResult</string>
    <string name="title_activity_car_details">CarDetails</string>
    <string name="tariffdetails">Tariff Details</string>
    <string name="faretotal">Fare Total</string>
    <string name="RefundableDeposit">Refundable Deposit</string>
    <string name="RefundableDepositDescription">This amount will be refunded once your booking is over. You can pay this 24 hours before your booking starts.</string>
    <string name="PayableAmount">Payable Amount</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="EmailAddress">Email Address</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="ForgotPswd">Forgot Password?</string>
    <string name="OR">OR</string>
    <string name="SignInWith">Sign in with</string>
    <string name="FaceBook">Facebook</string>
    <string name="GooglePlus">Google+</string>
    <string name="Donthaveaccount">Don\'t have an account yet?</string>
    <string name="SignUp">Sign Up</string>
    <string name="AlreadyHaveanaccount">Already have an account?</string>
    <string name="Names">Name</string>
    <string name="PasswordConfirm">Confirm Password</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="DoB">Date of Birth</string>
    <string name="Currency">AED</string>

    <string name="Diesel">Diesel</string>
    <string name="Petrol">Petrol</string>
    <string name="Manual">Manual</string>
    <string name="Automatic">Automatic</string>
    <string name="PowerWindow">Power Window</string>
    <string name="AC">AC</string>
    <string name="ACNon">Non AC</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="GPS">GPS</string>
    <string name="AudioSystem">Audio System</string>
    <string name="Seat5">5 Seat</string>
    <string name="Seat2">2 Seat</string>
    <string name="Seat7">7 Seat</string>

    <string name="locationdetails">Location Details</string>
    <string name="cardetails">Car Details</string>
    <string name="newpassword">Send New Password</string>
</resources>
