<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white"
                    android:paddingLeft="@dimen/component_margin"
                    android:paddingRight="@dimen/component_margin"
                    android:text="@string/SignUp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xlar_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/Names" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/EmailAddress"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/editText4"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/MobileNumber"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/DoB"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/PasswordConfirm"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/extra_space_margin"
                    android:layout_marginRight="@dimen/extra_space_margin"
                    android:layout_marginTop="@dimen/component_margin"
                    android:background="@drawable/theme_button_square3_blue"
                    android:text="@string/SignUp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/nor_text_size" />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/screen_margin_small"
                android:layout_marginTop="@dimen/screen_margin_small"
                android:background="@color/line_color_dim"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/normal_margin">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/white"
                    android:paddingLeft="@dimen/component_margin"
                    android:paddingRight="@dimen/component_margin"
                    android:text="@string/AlreadyHaveanaccount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xlar_text_size" />

                <Button
                    android:id="@+id/buttonForgotPswd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/extra_space_margin"
                    android:layout_marginRight="@dimen/extra_space_margin"
                    android:layout_marginTop="@dimen/component_margin"
                    android:background="@drawable/theme_button_white_text"
                    android:text="@string/SignIn"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/nor_text_size" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>