<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:paddingLeft="@dimen/component_margin"
            android:paddingRight="@dimen/component_margin"
            android:text="@string/ForgotPswd"
            android:textColor="@color/black"
            android:textSize="@dimen/xlar_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/normal_margin">

        <android.support.design.widget.TextInputLayout
            style="@style/match_wrap"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/component_margin"
            android:hint="@string/EmailAddress">

            <EditText
                android:id="@+id/et_email"
                style="@style/edit_text"
                android:drawableLeft="@drawable/icon_emails"
                android:drawablePadding="@dimen/text_icon_padding"
                android:textSize="@dimen/nor_text_size"
                android:paddingLeft="@dimen/normal_margin"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/extra_space_margin"
            android:layout_marginRight="@dimen/extra_space_margin"
            android:layout_marginTop="@dimen/extra_space_half_margin"
            android:background="@drawable/theme_button_square3_blue"
            android:text="@string/newpassword"
            android:textColor="@color/white"
            android:textSize="@dimen/nor_text_size" />

    </LinearLayout>
</LinearLayout>