<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_background_inset"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/theme_frame_border_c1"
        android:minWidth="300dp"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/theme_frame_border_c2"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/normal_margin"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/normal_margin"
                android:layout_weight="1"
                android:text="@string/india"
                android:textColor="@android:color/black"
                android:textSize="@dimen/xlar_text_size" />

            <Button
                android:id="@+id/btn_done"
                style="@android:style/Holo.Light.ButtonBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/theme_button_square2"
                android:gravity="right|center_vertical"
                android:paddingEnd="@dimen/normal_margin"
                android:paddingRight="@dimen/normal_margin"
                android:text="@string/Done"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/nor_text_size" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/component_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_margin"
                android:background="@color/grey_header"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/normal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/normal_margin"
                    android:text="@string/Bangalore"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/nor_text_size" />

                <RadioButton
                    android:id="@+id/rbBangalore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_style1"
                    android:button="@android:color/transparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_margin"
                android:background="@color/grey_header"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/normal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/normal_margin"
                    android:text="@string/Chennai"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/nor_text_size" />

                <RadioButton
                    android:id="@+id/rbChennai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_style1"
                    android:button="@android:color/transparent" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_margin"
                android:background="@color/grey_header"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/normal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/normal_margin"
                    android:text="@string/Coimbatore"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/nor_text_size" />

                <RadioButton
                    android:id="@+id/rbCoimbatore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_style1"
                    android:button="@android:color/transparent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_margin"
                android:background="@color/grey_header"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/normal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/normal_margin"
                    android:text="@string/Cochin"
                    android:textColor="@color/grey_dark"
                    android:textSize="@dimen/nor_text_size" />

                <RadioButton
                    android:id="@+id/rbCochin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/radio_button_style1"
                    android:button="@android:color/transparent" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

